samples/_failures_safe/1761364705_cd0465_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d81e670c.c: In function ‘main’:
./samples/SAFE/__tmp_d81e670c.c:136:16: error: missing terminating " character
  136 |         printf("De
      |                ^~~
./samples/SAFE/__tmp_d81e670c.c:136:9: error: expected expression at end of input
  136 |         printf("De
      |         ^~~~~~
./samples/SAFE/__tmp_d81e670c.c:136:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d81e670c.c:136:9: error: expected declaration or statement at end of input
